<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etNewUser"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/enter_email"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewUser" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="Enter FullName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/btnSignUp2"
        android:layout_width="317dp"
        android:layout_height="50dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/sign_up2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="22dp" />

    <Button
        android:id="@+id/goToSignIn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="161dp"
        android:layout_height="31dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/have_an_account"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="212dp"
        android:layout_height="164dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/etNewUser"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp2"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/btnSignUp2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/artmates" />

</androidx.constraintlayout.widget.ConstraintLayout>