<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        tools:context=".authentication.LandingPageActivity"
        android:id="@+id/btnLogin"
        android:layout_width="317dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/login_buttons"
        android:fontFamily="@font/open_sans_bold"
        android:onClick="onLogIn"
        android:text="@string/login2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btnSignUp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="317dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/sign_up_button"
        android:fontFamily="@font/open_sans_bold"
        android:onClick="onSignUp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/welcome_to_artmates"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="240dp"
        android:layout_height="177dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/artmates"
        app:layout_constraintBottom_toTopOf="@+id/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>